# google-meet-transcription-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: explanation.txt  settings.json
src/automation/: meet_controller.py
src/utils/: config.py  logger.py
